--- a/frontend/components/blocks/CardGridBlock/styles.module.css
+++ b/frontend/components/blocks/CardGridBlock/styles.module.css
@@ -11,6 +11,17 @@
   gap: var(--spacing-md);
 }
 
+.heading {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: 0;
+  }
+}
+
 .title {
   &::first-letter {
     text-transform: capitalize;
